--- a/_includes/card.html
+++ b/_includes/card.html
@@ -1,25 +1,7 @@
-<div class="card shadow">
+<!-- <div class="card shadow">
     <div class="card-body">
         <h5 class="card-title">{{ include.post.title }}</h5>
         <p class="card-text">{{ include.post.excerpt | strip_html | strip_newlines | truncate: 150 }}</p>
         <a href="{{ post.url }}" class="btn btn-primary">Read more</a>
     </div>
-</div>
-<div class="col-md-6 mb-4">
-
-    <div class="list-group-flush">
-        <div class="list-group-item">
-            <p class="mb-0"><i class="fab fa-instagram fa-2x mr-4 blue p-3 white-text rounded "
-                    aria-hidden="true"></i>Photos</p>
-        </div>
-        <div class="list-group-item">
-            <p class="mb-0"> <i class="fab fa-slack-hash fa-2x mr-4 mr-4 red p-3 white-text rounded"
-                    aria-hidden="true"></i>Work</p>
-        </div>
-        <div class="list-group-item">
-            <p class="mb-0"><i class="fab fa-snapchat fa-2x mr-4 mr-4 purple p-3 white-text rounded"
-                    aria-hidden="true"></i>Vacation</p>
-        </div>
-    </div>
-
-</div>
+</div> -->
