--- a/_sass/custom/_base.scss
+++ b/_sass/custom/_base.scss
@@ -220,7 +220,7 @@ $hidden-direction: ("down", -30), ("up", 30);
 code {
   border-radius: 5px;
   padding: 3px 5px;
-  background-color: var(--tag-background-color);
+  background-color: var(--highlight-background-color);
 }
 
 pre code {
