--- a/_sass/custom/_base.scss
+++ b/_sass/custom/_base.scss
@@ -21,9 +21,14 @@ h4 {
 }
 
 a {
+  color: #09bddd;
   &:active,
   &:focus {
     outline: none;
+  }
+  &:hover {
+    color: #0aa3be;
+    text-decoration: none;
   }
 }
 
