--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -4,7 +4,7 @@
         <a class="navbar-brand mb-0 h1 add-margin-left-normal add-padding-bottom-small" href="/">
             <img src="{{ "/assets/images/UA_favicon_dark.svg" | relative_url }}" width="40" height="30"
                 class="d-inline-block home-logo favicon" alt="UA">
-            <span class="home-title">Yu-Yueh Liu</span>
+            <span class="home-title">{{ site.github_username }}</span>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
             aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation"
