--- a/_sass/custom/pages/_articles.scss
+++ b/_sass/custom/pages/_articles.scss
@@ -1,5 +1,6 @@
 .article-item {
   @include relative-font-size(1);
+  font-family: $post-font-family;
   display: flex;
   color: var(--main-text-color);
   background-color: var(--card-background-color);
@@ -20,9 +21,75 @@
     font-weight: bold;
   }
 
-  .article-label {
+  span.article-label {
     max-width: 100%;
-    color: var(--main-text-color);
+    width: 100%;
+    text-align: center;
+    display: inline-block;
+    height: 24px;
+    line-height: 24px;
+    position: relative;
+    margin: 0 16px 8px 0;
+    padding: 0 10px 0 12px;
+    -webkit-border-bottom-right-radius: 3px;
+    border-bottom-right-radius: 3px;
+    -webkit-border-top-right-radius: 3px;
+    border-top-right-radius: 3px;
+    color: #fff;
+    font-size: 12px;
+    font-family: "Lucida Grande", "Lucida Sans Unicode", Verdana, sans-serif;
+    text-decoration: none;
+    font-weight: bold;
+
+    &.latest,
+    &.new {
+      -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
+      box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
+      text-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
+      &:after {
+        background: #fff;
+      }
+    }
+
+    &.latest {
+      background-color: var(--tag-latest-background-color);
+    }
+    &.latest:before {
+      border-color: transparent var(--tag-latest-background-color) transparent transparent;
+    }
+
+    &.new {
+      background-color: var(--tag-new-background-color);
+    }
+    &.new:before {
+      border-color: transparent var(--tag-new-background-color) transparent transparent;
+    }
+  }
+
+  span.article-label:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: -12px;
+    width: 0;
+    height: 0;
+    border-color: transparent transparent transparent transparent;
+    border-style: solid;
+    border-width: 12px 12px 12px 0;
+  }
+
+  span.article-label:after {
+    content: "";
+    position: absolute;
+    top: 10px;
+    left: 1px;
+    float: left;
+    width: 5px;
+    height: 5px;
+    -webkit-border-radius: 50%;
+    border-radius: 50%;
+    -webkit-box-shadow: -1px -1px 2px rgba(0, 0, 0, 0.4);
+    box-shadow: -1px -1px 2px rgba(0, 0, 0, 0.4);
   }
 }
 
@@ -30,12 +97,6 @@
   max-width: 800px;
   margin-left: auto;
   margin-right: auto;
-}
-
-.latest {
-  border-radius: 5px;
-  font-weight: 500;
-  background-color: rgb(221, 106, 53);
 }
 
 // .blog {
