add code_block plugin

--- a/_sass/custom/_base.scss
+++ b/_sass/custom/_base.scss
@@ -234,12 +234,11 @@ pre code {
   padding: 1.5rem;
   overflow: auto;
   border: 0;
-  box-shadow: 2px 4px 25px rgba(0, 0, 0, 0.15);
 }
 
-.highlight {
+pre {
   border-radius: 5px;
-  box-shadow: 2px 4px 15px rgba(0, 0, 0, 0.35);
+  box-shadow: 2px 4px 15px rgba(0, 0, 0, 0.6);
 }
 
 .section-title {
