add table for entrypoint vs cmd comparison

--- a/_sass/custom/_base.scss
+++ b/_sass/custom/_base.scss
@@ -252,7 +252,7 @@ pre code {
 
 pre {
   border-radius: 5px;
-  box-shadow: 2px 4px 15px rgba(0, 0, 0, 0.6);
+  box-shadow: 2px 4px 15px var(--box-shadow-color);
 }
 
 .section-title {
