fix codeblock css

--- a/_sass/custom/_themes.scss
+++ b/_sass/custom/_themes.scss
@@ -62,7 +62,7 @@ html[data-theme="dark"] {
   --highlight-hover-color: #fada96e3; //#4888db;
   --highlight-transparent-color: #ffae0015; //#4888db;
   --highlight-hover-transparent-color: #ffae003a; //#4888db;
-  --highlight-background-color: #0a121b;
+  --highlight-background-color: #5a3d0066;
 
   // background
   --main-background-color: hsl(0, 0%, 13.5%);
