--- a/_sass/custom/layouts/_post.scss
+++ b/_sass/custom/layouts/_post.scss
@@ -104,7 +104,7 @@
   background: rgba(255, 255, 255, 0.2);
 }
 
-table {
+table:not(.hljs-ln) {
   font-family: open sans, -apple-system, BlinkMacSystemFont, segoe ui, Roboto, helvetica neue, Arial, sans-serif,
     apple color emoji, segoe ui emoji, segoe ui symbol;
   margin: 25px auto;
