--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,5 +1,6 @@
 <head>
     <title>{{ page.title }} - {{ site.title }}</title>
+    <meta name="google-site-verification" content="HSKSURZsT6ZUCdOqCx8SBhp4jD-paLVBxYIiDeN3RHs" />
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale = 1.0, maximum-scale=1.0, user-scalable=no" />
