--- a/_sass/custom/layouts/_post.scss
+++ b/_sass/custom/layouts/_post.scss
@@ -141,4 +141,22 @@ table:not(.hljs-ln) {
   tbody tr:nth-child(even) {
     background: var(--table-even-row-background-color);
   }
+
+  .rect {
+    border-top: 3px solid #333;
+    border-bottom: 3px solid #333;
+    padding-top: 15px;
+    margin: 0 auto;
+  }
+
+  .rel {
+    width: 200px;
+    display: inline-block;
+    padding: 5px;
+    opacity: 0.8;
+  }
+
+  .rel hover {
+    opacity: 1;
+  }
 }
