--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -19,7 +19,7 @@ layout: default
         <span class="post-tags">
             {% for tag in page.tags %}
             <!-- <a href="/tags/{{tag}}" class="tag"></a> -->
-            <a href="_blank" class="tag" data-proofer-ignore>
+            <a href="/tags/{{ tag }}" class="tag" data-proofer-ignore>
                 <span>{{ tag }}</span>
             </a>
             {% endfor %}
@@ -28,6 +28,44 @@ layout: default
 
     <div class="post-body">
         {{ content }}
+    </div>
+
+    <h2>You May Also Like</h2>
+    <div class="rect">
+        {% assign maxRelated = 4 %}
+        {% assign minCommonTags =  1 %}
+        {% assign maxRelatedCounter = 0 %}
+
+        {% for post in site.posts %}
+
+        {% assign sameTagCount = 0 %}
+        {% assign commonTags = '' %}
+
+        {% for tag in post.tags %}
+        {% if post.url != page.url %}
+        {% if page.tags contains tag %}
+        {% assign sameTagCount = sameTagCount | plus: 1 %}
+        {% capture tagmarkup %} <span class="label label-default">{{ tag }}</span> {% endcapture %}
+        {% assign commonTags = commonTags | append: tagmarkup %}
+        {% endif %}
+        {% endif %}
+        {% endfor %}
+
+        {% if sameTagCount >= minCommonTags %}
+
+        <a href="{{ site.baseurl }}{{ post.url }}">
+            <div class="rel">
+                <h5>{{ post.title }}</h5>
+                <img width="100%" src="{{post.image}}">
+            </div>
+        </a>
+
+        {% assign maxRelatedCounter = maxRelatedCounter | plus: 1 %}
+        {% if maxRelatedCounter >= maxRelated %}
+        {% break %}
+        {% endif %}
+        {% endif %}
+        {% endfor %}
     </div>
     <!-- <a class="u-url" href="{{ page.url | relative_url }}" hidden></a> -->
 </article>
