fix scripts order

--- a/_includes/canvas.html
+++ b/_includes/canvas.html
@@ -11,6 +11,12 @@
     <a class="down" href="#{{tag}}" data-scroll><i id="chevron" class="icon fa fa-chevron-down"
             aria-hidden="true"></i></a>
 </div>
+<script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"
+    integrity="sha384-3u0U01MLvyGLlqCxH5vNw55TTJ2zWaZDnxbCYz81kDzq3RYYXMVSDPLxPJu+jcCg"
+    crossorigin="anonymous"></script>
+<script src="https://unpkg.com/sweet-scroll@4.0.0/sweet-scroll.min.js"
+    integrity="sha384-YeNQy+x5Gp48/m1w+zup7sXeNzVPCC14WVR6+jevxGxvRw/1grCNT4QBzGg8b+ov"
+    crossorigin="anonymous"></script>
 <script src="{{ "/assets/js/app.js" | relative_url }}" tag="{{tag}}"></script>
 <div id="{{tag}}"></div>
 <div class="shade align-items-center">
