--- a/_sass/bootstrap/scss/_forms.scss
+++ b/_sass/bootstrap/scss/_forms.scss
@@ -78,7 +78,6 @@ select.form-control {
   width: 100%;
 }
 
-
 //
 // Labels
 //
@@ -107,7 +106,6 @@ select.form-control {
   line-height: $input-line-height-sm;
 }
 
-
 // Readonly controls as plain text
 //
 // Apply class to a readonly input to make it appear like regular plain
@@ -131,7 +129,6 @@ select.form-control {
     padding-left: 0;
   }
 }
-
 
 // Form control sizing
 //
@@ -182,7 +179,6 @@ textarea.form-control {
   margin-top: $form-text-margin-top;
 }
 
-
 // Form grid
 //
 // Special replacement for our grid system's `.row` for tighter form layouts.
@@ -190,16 +186,15 @@ textarea.form-control {
 .form-row {
   display: flex;
   flex-wrap: wrap;
-  margin-right: -$form-grid-gutter-width / 2;
-  margin-left: -$form-grid-gutter-width / 2;
+  margin-right: calc(-1 * $form-grid-gutter-width / 2);
+  margin-left: calc(-1 * $form-grid-gutter-width / 2);
 
   > .col,
   > [class*="col-"] {
-    padding-right: $form-grid-gutter-width / 2;
-    padding-left: $form-grid-gutter-width / 2;
+    padding-right: calc($form-grid-gutter-width / 2);
+    padding-left: calc($form-grid-gutter-width / 2);
   }
 }
-
 
 // Checkboxes and radios
 //
@@ -242,7 +237,6 @@ textarea.form-control {
   }
 }
 
-
 // Form validation
 //
 // Provide feedback to users when form field values are valid or invalid. Works
@@ -251,7 +245,11 @@ textarea.form-control {
 // server side validation.
 
 @each $state, $data in $form-validation-states {
-  @include form-validation-state($state, map-get($data, color), map-get($data, icon));
+  @include form-validation-state(
+    $state,
+    map-get($data, color),
+    map-get($data, icon)
+  );
 }
 
 // Inline forms
